Avoid Java 9 collection APIs on Android